# CPNR_OMEG_colab_low_energy_optical

./: CMakeLists.txt  CPNR_OMEG_colab_low_energy_optical.cc  README.md  init_vis_angular.mac  run_all.sh  run_angular_template.mac  run_beamOn.mac)  run_single.mac  scan_all.mac
include/: DetectorConstruction.hh  LSHit.hh  LSSD.hh  PMTHit.hh  PMTSD.hh  PrimaryGeneratorAction.hh
src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  LSHit.cc  LSSD.cc  PMTHit.cc  PMTSD.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc  TrackingAction.cc
